fix(chatbar): fixed alignment with autocomplete tab (#5295)
* fix(chatbar): fixed alignment with autocomplete tab

* fix(chatbar): reverted border, changed autocomplete box' position

* fix(chatbar): added view condition back again

--- a/components/views/chat/chatbar/autocomplete/Autocomplete.less
+++ b/components/views/chat/chatbar/autocomplete/Autocomplete.less
@@ -1,8 +1,9 @@
 .chatbar-autocomplete {
   position: absolute;
   bottom: 100%;
-  left: 0;
-  right: 0;
+  // -1px in order to match chatbar's border
+  left: -1px;
+  right: -1px;
   // background-color: @midground;
   background-image: @semitransparent-dark-gradient;
   border-radius: @corner-rounding @corner-rounding 0 0;
